RESOLVED FIXED 159388
DFG LICM needs to go all-in on the idea that some loops can't be LICMed
https://bugs.webkit.org/show_bug.cgi?id=159388
Summary DFG LICM needs to go all-in on the idea that some loops can't be LICMed
Filip Pizlo
Reported 2016-07-02 20:53:55 PDT
Some time ago I acknowledged that LICM required loops to meet certain requirements that may get broken by the time we do LICM, like that the terminal of the pre-header is ExitOK. It used to be that we just ignored that requirement and would hoist anyway, but since r189126 we've stopped hoisting out of loops that don't have ExitOK. We also added tests for the case that the pre-header doesn't exist or is invalid. It turns out that this patch didn't go far enough: even though it made LICM avoid loops that had an invalid pre-header, the part that updated the AI state in nested loops still assumed that these loops had valid pre-headers. We would crash in null dereference in that loop if a nested loop had an invalid pre-header. The fix is simple: don't update the AI state of nested loops that don't have pre-headers, since we won't try to hoist out of those loops anyway.
Attachments
the patch (4.55 KB, patch)
2016-07-02 21:00 PDT, Filip Pizlo
mark.lam: review+
Filip Pizlo
Comment 1 2016-07-02 21:00:49 PDT
Created attachment 282653 [details] the patch
Mark Lam
Comment 2 2016-07-03 06:15:24 PDT
Comment on attachment 282653 [details] the patch r=me.
Note You need to log in before you can comment on or make changes to this bug.